overflow on mobile phone fixed

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    min-height: 100vh;
+    max-height: 100vh;
     background-image: linear-gradient(135deg, #FAB2FF 10%, #1904E5 100%);
     background-attachment: fixed;
     overflow-x: hidden;
@@ -21,14 +21,12 @@ a:hover {
 .main {
     position: relative;
     padding: 40px;
-    height: 100vh;
-    width: 100vw;
+    min-height: 100vh;
+    min-width: 100vw;
     display: flex;
     justify-content: center;
     align-items: center;
     background: transparent;
-    -webkit-backdrop-filter: blur(5px);
-    backdrop-filter: blur(5px);
 }
 
 .intro {
